@@ -1594,6 +1594,23 @@ schema = Schema((
         allow_empty_rows=False,
     ),
     LinesField(
+        name='powerAdvisersGroups',
+        widget=MultiSelectionWidget(
+            description="PowerAdvisersGroups",
+            description_msgid="power_advisers_groups_descr",
+            size=10,
+            format="checkbox",
+            label='Poweradvisersgroups',
+            label_msgid='PloneMeeting_label_powerAdvisersGroups',
+            i18n_domain='PloneMeeting',
+        ),
+        schemata="advices",
+        multiValued=1,
+        vocabulary='listActiveMeetingGroupsForPowerAdvisers',
+        default=defValues.powerAdvisersGroups,
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    LinesField(
         name='itemPowerObserversStates',
         widget=MultiSelectionWidget(
             description="ItemPowerObserversStates",
@@ -1679,20 +1696,20 @@ schema = Schema((
         write_permission="PloneMeeting: Write risky config",
     ),
     LinesField(
-        name='powerAdvisersGroups',
+        name='itemGroupInChargeStates',
         widget=MultiSelectionWidget(
-            description="PowerAdvisersGroups",
-            description_msgid="power_advisers_groups_descr",
-            size=10,
+            description="ItemGroupInChargeStates",
+            description_msgid="item_group_in_charge_states_descr",
             format="checkbox",
-            label='Poweradvisersgroups',
-            label_msgid='PloneMeeting_label_powerAdvisersGroups',
+            label='Itemgroupinchargestates',
+            label_msgid='PloneMeeting_label_itemGroupInChargeStates',
             i18n_domain='PloneMeeting',
         ),
         schemata="advices",
         multiValued=1,
-        vocabulary='listActiveMeetingGroupsForPowerAdvisers',
-        default=defValues.powerAdvisersGroups,
+        vocabulary='listItemStates',
+        default=defValues.itemGroupInChargeStates,
+        enforceVocabulary=True,
         write_permission="PloneMeeting: Write risky config",
     ),
     BooleanField(
